--- a/ItemRental-Android/app/src/main/res/layout/dialog_rent.xml
+++ b/ItemRental-Android/app/src/main/res/layout/dialog_rent.xml
@@ -2,26 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="40dp"
-    android:paddingBottom="30dp">
+    android:layout_height="match_parent"
+    android:layout_margin="40dp">
 
     <TextView
         android:id="@+id/dialogRentTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:padding="20dp"
         android:text="@string/choose_rent_period"
         android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@id/dialogRentCalendar"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.savvi.rangedatepicker.CalendarPickerView
         android:id="@+id/dialogRentCalendar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="290dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:nestedScrollingEnabled="true"
+        app:layout_constraintBottom_toTopOf="@id/dialogRentError"
+        app:layout_constraintEnd_toEndOf="@id/dialogRentTitle"
+        app:layout_constraintStart_toStartOf="@id/dialogRentTitle"
         app:layout_constraintTop_toBottomOf="@id/dialogRentTitle" />
 
     <TextView
@@ -29,11 +34,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textSize="16sp"
         android:textColor="@color/error_red"
-        app:layout_constraintTop_toBottomOf="@id/dialogRentCalendar"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@id/dialogRentButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/dialogRentCalendar" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/dialogRentButton"
