--- a/ItemRental-Android/app/src/main/res/layout/item_rentableitem.xml
+++ b/ItemRental-Android/app/src/main/res/layout/item_rentableitem.xml
@@ -21,6 +21,7 @@
             style="?android:attr/textAppearanceLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -38,12 +39,12 @@
 
         <ImageView
             android:id="@+id/itemImage"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:layout_marginBottom="6dp"
             android:adjustViewBounds="true"
-            android:scaleType="centerInside"
+            android:scaleType="fitCenter"
             android:src="@mipmap/ic_logo_foreground"
             app:layout_constraintBottom_toTopOf="@id/userIcon"
             app:layout_constraintEnd_toEndOf="parent"
