--- a/ItemRental-Android/app/src/main/res/layout/item_rentableitem_details.xml
+++ b/ItemRental-Android/app/src/main/res/layout/item_rentableitem_details.xml
@@ -21,6 +21,7 @@
             style="?android:attr/textAppearanceLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold"
